--- a/01-starting-project/src/app/app.component.html
+++ b/01-starting-project/src/app/app.component.html
@@ -11,5 +11,9 @@
     }
   </ul>
 
-  <app-tasks [name]="selectedUserName"/>
+  @if (!!selectedUser) {
+    <app-tasks [name]="selectedUser.name"/>
+  } @else {
+    <p id="fallback">Select a user to see their tasks</p>
+  }
 </main>
