--- a/01-starting-project/src/app/app.component.html
+++ b/01-starting-project/src/app/app.component.html
@@ -12,7 +12,9 @@
   </ul>
 
   @if (!!selectedUser) {
-    <app-tasks [name]="selectedUser.name"/>
+    <app-tasks
+      [userId]="selectedUserId"
+      [name]="selectedUser.name"/>
   } @else {
     <p id="fallback">Select a user to see their tasks</p>
   }
