--- a/01-starting-project/src/app/tasks/tasks.component.html
+++ b/01-starting-project/src/app/tasks/tasks.component.html
@@ -1,15 +1,22 @@
+@if (isAddingTask) {
+  <app-new-task/>
+}
+
 <section id="tasks">
   <header>
     <h2>{{name}}'s Tasks</h2>
   </header>
   <menu>
-    <button>Add Task</button>
+    <button (click)="onStartAddTask()">Add Task</button>
   </menu>
 
   <ul>
     @for (task of selectedUserTasks; track task.id) {
       <li>
-        <app-task [task]="task"/>
+        <app-task
+          [task]="task"
+          (complete)="onCompleteTask($event)"
+        />
       </li>
     }
   </ul>
