--- a/01-starting-project/src/app/tasks/tasks.component.html
+++ b/01-starting-project/src/app/tasks/tasks.component.html
@@ -1,5 +1,7 @@
 @if (isAddingTask) {
-  <app-new-task (cancel)="onCancelAddTask()" (add)="onAddTask($event)"/>
+  <app-new-task
+    [userId]="userId"
+    (close)="onCloseAddTask()"/>
 }
 
 <section id="tasks">
