initial feature impl with standalone components

--- a/04-essentials-practice/src/app/app.component.html
+++ b/04-essentials-practice/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header/>
-<app-user-input/>
-<app-investment-results/>
+<app-user-input (detailsSubmit)="onDetailsSubmitted($event)"/>
+@if (!!investmentResults) {
+  <app-investment-results [investmentResults]="investmentResults"/>
+} @else {
+  <p id="fallback">Input details first</p>
+}
