--- a/04-essentials-practice/src/app/user-input/user-input.component.html
+++ b/04-essentials-practice/src/app/user-input/user-input.component.html
@@ -1,1 +1,33 @@
-<form></form>
+<form (ngSubmit)="onSubmit()">
+  <label for="initial-investment">INITIAL INVESTMENT</label>
+  <input type="number"
+         id="initial-investment"
+         name="initial-investment"
+         [(ngModel)]="initialInvestment"
+  >
+
+  <label for="annual-investment">ANNUAL INVESTMENT</label>
+  <input type="number"
+         id="annual-investment"
+         name="annual-investment"
+         [(ngModel)]="annualInvestment"
+  >
+
+  <label for="expected-return">EXPECTED RETURN</label>
+  <input type="number"
+         id="expected-return"
+         name="expected-return"
+         [(ngModel)]="expectedReturn"
+  >
+
+  <label for="duration">DURATION</label>
+  <input type="number"
+         id="duration"
+         name="duration"
+         [(ngModel)]="duration"
+  >
+
+  <p class="actions">
+    <button type="submit">CALCULATE</button>
+  </p>
+</form>
