--- a/04-essentials-practice/src/app/investment-results/investment-results.component.html
+++ b/04-essentials-practice/src/app/investment-results/investment-results.component.html
@@ -1,10 +1,20 @@
 <table>
   <thead>
-    <th>a</th>
+    <th>Year</th>
+    <th>Investment Value</th>
+    <th>Interest(Year)</th>
+    <th>Total Interest</th>
+    <th>Invested Capital</th>
   </thead>
   <tbody>
-    <tr>
-      <td>b</td>
-    </tr>
+    @for (line of investmentResults; track line.year) {
+      <tr>
+        <td>{{line.year}}</td>
+        <td>{{line.valueEndOfYear | currency:'USD'}}</td>
+        <td>{{line.interest | currency:'USD'}}</td>
+        <td>{{line.totalInterest | currency:'USD'}}</td>
+        <td>{{line.totalAmountInvested | currency:'USD'}}</td>
+      </tr>
+    }
   </tbody>
 </table>
