--- a/04-essentials-practice/src/app/user-input/user-input.component.html
+++ b/04-essentials-practice/src/app/user-input/user-input.component.html
@@ -1,33 +1,41 @@
 <form (ngSubmit)="onSubmit()">
-  <label for="initial-investment">INITIAL INVESTMENT</label>
-  <input type="number"
-         id="initial-investment"
-         name="initial-investment"
-         [(ngModel)]="initialInvestment"
-  >
-
-  <label for="annual-investment">ANNUAL INVESTMENT</label>
-  <input type="number"
-         id="annual-investment"
-         name="annual-investment"
-         [(ngModel)]="annualInvestment"
-  >
-
-  <label for="expected-return">EXPECTED RETURN</label>
-  <input type="number"
-         id="expected-return"
-         name="expected-return"
-         [(ngModel)]="expectedReturn"
-  >
-
-  <label for="duration">DURATION</label>
-  <input type="number"
-         id="duration"
-         name="duration"
-         [(ngModel)]="duration"
-  >
-
+  <div class="input-group">
+    <p>
+      <label for="initial-investment">Initial Investment</label>
+      <input type="number"
+             id="initial-investment"
+             name="initial-investment"
+             [(ngModel)]="initialInvestment"
+      >
+    </p>
+    <p>
+      <label for="annual-investment">Annual Investment</label>
+      <input type="number"
+             id="annual-investment"
+             name="annual-investment"
+             [(ngModel)]="annualInvestment"
+      >
+    </p>
+  </div>
+  <div class="input-group">
+    <p>
+      <label for="expected-return">Expected Return</label>
+      <input type="number"
+             id="expected-return"
+             name="expected-return"
+             [(ngModel)]="expectedReturn"
+      >
+    </p>
+    <p>
+      <label for="duration">Duration</label>
+      <input type="number"
+             id="duration"
+             name="duration"
+             [(ngModel)]="duration"
+      >
+    </p>
+  </div>
   <p class="actions">
-    <button type="submit">CALCULATE</button>
+    <button type="submit">Calculate</button>
   </p>
 </form>
