refactor & using signals

--- a/04-essentials-practice/src/app/app.component.html
+++ b/04-essentials-practice/src/app/app.component.html
@@ -1,7 +1,4 @@
 <app-header/>
-<app-user-input (detailsSubmit)="onDetailsSubmitted($event)"/>
-@if (!!investmentResults) {
-  <app-investment-results [investmentResults]="investmentResults"/>
-} @else {
-  <p id="fallback">Input details first</p>
-}
+<app-user-input/>
+<app-investment-results/>
+
