--- a/04-essentials-practice/src/app/investment-results/investment-results.component.html
+++ b/04-essentials-practice/src/app/investment-results/investment-results.component.html
@@ -1,20 +1,24 @@
-<table>
-  <thead>
+@if (!results) {
+  <p class="center">please enter some values and press "Calculate"</p>
+} @else {
+  <table>
+    <thead>
     <th>Year</th>
     <th>Investment Value</th>
     <th>Interest(Year)</th>
     <th>Total Interest</th>
     <th>Invested Capital</th>
-  </thead>
-  <tbody>
-    @for (line of investmentResults; track line.year) {
-      <tr>
-        <td>{{line.year}}</td>
-        <td>{{line.valueEndOfYear | currency:'USD'}}</td>
-        <td>{{line.interest | currency:'USD'}}</td>
-        <td>{{line.totalInterest | currency:'USD'}}</td>
-        <td>{{line.totalAmountInvested | currency:'USD'}}</td>
-      </tr>
-    }
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      @for (line of results; track line.year) {
+        <tr>
+          <td>{{ line.year }}</td>
+          <td>{{ line.valueEndOfYear | currency }}</td>
+          <td>{{ line.interest | currency }}</td>
+          <td>{{ line.totalInterest | currency }}</td>
+          <td>{{ line.totalAmountInvested | currency }}</td>
+        </tr>
+      }
+    </tbody>
+  </table>
+}
