--- a/04-essentials-practice/src/app/user-input/user-input.component.html
+++ b/04-essentials-practice/src/app/user-input/user-input.component.html
@@ -5,7 +5,7 @@
       <input type="number"
              id="initial-investment"
              name="initial-investment"
-             [(ngModel)]="initialInvestment"
+             [(ngModel)]="enteredInitialInvestment"
       >
     </p>
     <p>
@@ -13,7 +13,7 @@
       <input type="number"
              id="annual-investment"
              name="annual-investment"
-             [(ngModel)]="annualInvestment"
+             [(ngModel)]="enteredAnnualInvestment"
       >
     </p>
   </div>
@@ -23,7 +23,7 @@
       <input type="number"
              id="expected-return"
              name="expected-return"
-             [(ngModel)]="expectedReturn"
+             [(ngModel)]="enteredExpectedReturn"
       >
     </p>
     <p>
@@ -31,11 +31,11 @@
       <input type="number"
              id="duration"
              name="duration"
-             [(ngModel)]="duration"
+             [(ngModel)]="enteredDuration"
       >
     </p>
   </div>
-  <p class="actions">
+  <p>
     <button type="submit">Calculate</button>
   </p>
 </form>
