--- a/06-cmp-deep-dive/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/06-cmp-deep-dive/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -8,11 +8,9 @@
     <textarea rows="3" name="request" id="request"></textarea>
   </p>
   <p>
-    <button>
-      <span>Submit</span>
-      <span class="icon">
-        ⌲
-      </span>
+    <button appButton>
+      Submit
+      <span class="icon">⌲</span>
     </button>
   </p>
 </form>
