--- a/06-cmp-deep-dive/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/06-cmp-deep-dive/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,8 +1,8 @@
 <form (ngSubmit)="onSubmit()">
-  <app-control class="control" label="Title">
+  <app-control class="foo" label="Title">
     <input type="text" name="title" id="title">
   </app-control>
-  <app-control class="control" label="Request">
+  <app-control class="foo" label="Request">
     <textarea rows="3" name="request" id="request"></textarea>
   </app-control>
   <p>
